Fix metadata alignment in search results; fixes #1480

--- a/app/assets/stylesheets/modules/blacklight_overrides.scss
+++ b/app/assets/stylesheets/modules/blacklight_overrides.scss
@@ -73,6 +73,8 @@
     .document-metadata {
       @extend .col-8;
       @extend .col-md-9;
+      @extend .offset-3;
+      @extend .offset-md-2;
     }
 
     .document-thumbnail {
